--- a/textbanner/build.gradle
+++ b/textbanner/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
-
+apply from: rootProject.file("bintray.gradle")
 android {
     compileSdkVersion rootProject.compileSdkVersion
     defaultConfig {
